--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -27,18 +27,12 @@ double \mbox{\hyperlink{classRGESolver_a834b18f36a698038cbf574ea52fa2545}{epsrel
 \mbox{\Hypertarget{classRGESolver_a87ca405240592096e3671d4e1fd81b6b}\label{classRGESolver_a87ca405240592096e3671d4e1fd81b6b}} 
 double \mbox{\hyperlink{classRGESolver_a87ca405240592096e3671d4e1fd81b6b}{epsabs}} ()
 \begin{DoxyCompactList}\small\item\em Getter for the absolute error used in the numerical integration. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classRGESolver_a3c47c6eedf33555875b32fda5166748b}\label{classRGESolver_a3c47c6eedf33555875b32fda5166748b}} 
-double \mbox{\hyperlink{classRGESolver_a3c47c6eedf33555875b32fda5166748b}{step}} ()
-\begin{DoxyCompactList}\small\item\em Getter for the step used in the numerical integration. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classRGESolver_af059a6bea6999430ab424de2633721cf}\label{classRGESolver_af059a6bea6999430ab424de2633721cf}} 
-void \mbox{\hyperlink{classRGESolver_af059a6bea6999430ab424de2633721cf}{Set\+\_\+epsrel}} (double \mbox{\hyperlink{classRGESolver_a834b18f36a698038cbf574ea52fa2545}{epsrel}})
-\begin{DoxyCompactList}\small\item\em Setter for the relative error used in the numerical integration. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classRGESolver_a25286cb7bd18f41e5d631a9a14be1cbf}\label{classRGESolver_a25286cb7bd18f41e5d631a9a14be1cbf}} 
-void \mbox{\hyperlink{classRGESolver_a25286cb7bd18f41e5d631a9a14be1cbf}{Set\+\_\+epsabs}} (double \mbox{\hyperlink{classRGESolver_a87ca405240592096e3671d4e1fd81b6b}{epsabs}})
-\begin{DoxyCompactList}\small\item\em Setter for the absolute error used in the numerical integration. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classRGESolver_a51938deb00fbca684c8e4e5b10a239ad}\label{classRGESolver_a51938deb00fbca684c8e4e5b10a239ad}} 
-void \mbox{\hyperlink{classRGESolver_a51938deb00fbca684c8e4e5b10a239ad}{Set\+\_\+step}} (double \mbox{\hyperlink{classRGESolver_a3c47c6eedf33555875b32fda5166748b}{step}})
-\begin{DoxyCompactList}\small\item\em Setter for the step used in the numerical integration. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\mbox{\Hypertarget{classRGESolver_ae31b8e876f8d158f98fee5b402628d7b}\label{classRGESolver_ae31b8e876f8d158f98fee5b402628d7b}} 
+void \mbox{\hyperlink{classRGESolver_ae31b8e876f8d158f98fee5b402628d7b}{Setepsrel}} (double \mbox{\hyperlink{classRGESolver_a834b18f36a698038cbf574ea52fa2545}{epsrel}})
+\begin{DoxyCompactList}\small\item\em Setter for the relative error used in the numerical integration (default value = 0.\+005) \end{DoxyCompactList}\item 
+\mbox{\Hypertarget{classRGESolver_a82723bc1077713dea8cafa5319298a2e}\label{classRGESolver_a82723bc1077713dea8cafa5319298a2e}} 
+void \mbox{\hyperlink{classRGESolver_a82723bc1077713dea8cafa5319298a2e}{Setepsabs}} (double \mbox{\hyperlink{classRGESolver_a87ca405240592096e3671d4e1fd81b6b}{epsabs}})
+\begin{DoxyCompactList}\small\item\em Setter for the absolute error used in the numerical integration (default value = e-\/13) \end{DoxyCompactList}\end{DoxyCompactItemize}
 \end{Indent}
 \begin{Indent}\textbf{ Evolution}\par
 \begin{DoxyCompactItemize}
@@ -82,9 +76,12 @@ double \mbox{\hyperlink{classRGESolver_ab4da1b64edf881b585de6bcfd03a2ab5}{Get\+C
 \begin{DoxyCompactList}\small\item\em Getter function for 4F parameters (4 flavour indices). one of the inserted indices is outside the \mbox{[}0\+:2\mbox{]} range, an error message is printed and the value 0 is returned. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRGESolver_a98473c7d53e598bfef878106a3715948}\label{classRGESolver_a98473c7d53e598bfef878106a3715948}} 
 void \mbox{\hyperlink{classRGESolver_a98473c7d53e598bfef878106a3715948}{Reset}} ()
-\begin{DoxyCompactList}\small\item\em Resets all the S\+M\+E\+FT coefficients to 0 and the SM parameters to their default value. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Resets all the S\+M\+E\+FT coefficients to 0 and the SM parameters to their default value. $\epsilon_{\textrm{abs}}$ and $\epsilon_{\textrm{rel}}$ are reset to their default value. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}{Save\+Output\+File}} (std\+::string filename, std\+::string format)
-\begin{DoxyCompactList}\small\item\em Saves the current values of parameters in a file. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Saves the current values of parameters in a file. \end{DoxyCompactList}\item 
+\mbox{\Hypertarget{classRGESolver_aa7c41846346d9daec4a13c1bc68f4904}\label{classRGESolver_aa7c41846346d9daec4a13c1bc68f4904}} 
+void {\bfseries test} ()
+\end{DoxyCompactItemize}
 \end{Indent}
 
 
