Minor adjustements in the documentation

--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -14,7 +14,7 @@ A class that performs renormalization group evolution in the context of the S\+M
 \item 
 \mbox{\Hypertarget{classRGESolver_a45669aa780325da0b1e866ba229b277f}\label{classRGESolver_a45669aa780325da0b1e866ba229b277f}} 
 \mbox{\hyperlink{classRGESolver_a45669aa780325da0b1e866ba229b277f}{R\+G\+E\+Solver}} ()
-\begin{DoxyCompactList}\small\item\em The default constructor. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em The default constructor. It initializes to 0 all the S\+M\+E\+FT coefficients. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classRGESolver_ab1edd7795c6a3dfd0ee1a13a0ae25361}\label{classRGESolver_ab1edd7795c6a3dfd0ee1a13a0ae25361}} 
 \mbox{\hyperlink{classRGESolver_ab1edd7795c6a3dfd0ee1a13a0ae25361}{$\sim$\+R\+G\+E\+Solver}} ()
 \begin{DoxyCompactList}\small\item\em The default destructor. \end{DoxyCompactList}\end{DoxyCompactItemize}
@@ -78,10 +78,7 @@ double \mbox{\hyperlink{classRGESolver_ab4da1b64edf881b585de6bcfd03a2ab5}{Get\+C
 void \mbox{\hyperlink{classRGESolver_a98473c7d53e598bfef878106a3715948}{Reset}} ()
 \begin{DoxyCompactList}\small\item\em Resets all the S\+M\+E\+FT coefficients to 0 and the SM parameters to their default value. $\epsilon_{\textrm{abs}}$ and $\epsilon_{\textrm{rel}}$ are reset to their default value. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classRGESolver_ab6a813bff78d9278d3b875ea9c2f5324}{Save\+Output\+File}} (std\+::string filename, std\+::string format)
-\begin{DoxyCompactList}\small\item\em Saves the current values of parameters in a file. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classRGESolver_aa7c41846346d9daec4a13c1bc68f4904}\label{classRGESolver_aa7c41846346d9daec4a13c1bc68f4904}} 
-void {\bfseries test} ()
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Saves the current values of parameters in a file. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \end{Indent}
 
 
