Small change in the examples

--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -500,7 +500,7 @@ The initial conditions are generated at the scale {\ttfamily mu} starting from t
 
 Generates the initial conditions for Standard Model\textquotesingle{}s parameters (gauge couplings, Yukawa coupling, quartic coupling and Higgs\textquotesingle{} boson mass) at the scale {\ttfamily mu} (in GeV), using one-\/loop pure SM beta functions. 
 
-The initial conditions are generated at the scale {\ttfamily mu\+Fin} starting from the inserted parameters at the scale {\ttfamily mu\+In}. This method should be used with usual fermion hierarchy (smallest mass for the 1st generation and greatest mass for the 3rd withoud mass degeneracy for all up and down quarks and for charged leptons). The generation of the initial conditions is performed only if all the masses are non-\/negative and if $ \theta_{12},\theta_{13},\theta_{23} \in [0, \pi/2] $, $\delta \in (\pi,\pi]$. 
+The initial conditions are generated at the scale {\ttfamily mu\+Fin} starting from the inserted parameters at the scale {\ttfamily mu\+In}. This method should be used with usual fermion hierarchy (smallest mass for the 1st generation and greatest mass for the 3rd withoud mass degeneracy for all up and down quarks and for charged leptons). The generation of the initial conditions is performed only if all the masses are non-\/negative and if $ \sin \theta_{ij} \in (0,1) $, $\delta \in (\pi,\pi]$. 
 \begin{DoxyParams}{Parameters}
 {\em mu\+In} & Low-\/energy input scale (in GeV) \\
 \hline
