--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -164,6 +164,57 @@ $m_{\tau}$ $[\mathrm{GeV}]$ &{\ttfamily mtau} ~\newline
 \end{longtabu}
 
 \end{DoxyCopyright}
+\hypertarget{classRGESolver_SMInput}{}
+\tabulinesep=1mm
+\begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
+\caption{SM parameters used by default to generate SM initial conditions at an arbitrary scale. The scale at which these parameters are given is $ \mu = 173.65$ GeV. We follow \href{http://www.utfit.org/UTfit/Formalism}{\texttt{ http\+://www.\+utfit.\+org/\+U\+Tfit/\+Formalism}} for what concerns the conventions for the C\+KM matrix. }\label{classRGESolver_SMInput}\\
+\hline
+{\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
+\cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Value ~\newline
+ }\\\cline{1-2}
+$g_1$ &0.\+3573 \\\cline{1-2}
+$g_2$ &0.\+6511 \\\cline{1-2}
+$g_3$ &1.\+161 ~\newline
+ \\\cline{1-2}
+$\lambda$ &0.\+1297 ~\newline
+ \\\cline{1-2}
+$m_h^2$ $[\mathrm{GeV}^2]$ &15650 ~\newline
+ \\\cline{1-2}
+$\sin(\theta_{12})$ &0.\+225 ~\newline
+ \\\cline{1-2}
+$\sin(\theta_{13})$ &0.\+042 ~\newline
+ \\\cline{1-2}
+$\sin(\theta_{23})$ &0.\+003675 ~\newline
+ \\\cline{1-2}
+$\delta$ \mbox{[}rad\mbox{]} &1.\+1676 ~\newline
+ \\\cline{1-2}
+\end{tabularx}}
+&{\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
+\cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Value \mbox{[}GeV\mbox{]} ~\newline
+ }\\\cline{1-2}
+$m_u$ $[\mathrm{GeV}]$ &0.\+0012 ~\newline
+ \\\cline{1-2}
+$m_c$ $[\mathrm{GeV}]$ &0.\+640 ~\newline
+ \\\cline{1-2}
+$m_t$ $[\mathrm{GeV}]$ &126.\+0 ~\newline
+ \\\cline{1-2}
+$m_d$ $[\mathrm{GeV}]$ &0.\+0027 ~\newline
+ \\\cline{1-2}
+$m_s$ $[\mathrm{GeV}]$ &0.\+052 ~\newline
+ \\\cline{1-2}
+$m_b$ $[\mathrm{GeV}]$ &2.\+75 ~\newline
+ \\\cline{1-2}
+$m_{e}$ $[\mathrm{GeV}]$ &0.\+000511 ~\newline
+ \\\cline{1-2}
+$m_{\mu}$ $[\mathrm{GeV}]$ &0.\+1057 ~\newline
+ \\\cline{1-2}
+$m_{\tau}$ $[\mathrm{GeV}]$ &1.\+776 ~\newline
+ \\\cline{1-2}
+\end{tabularx}}
+\\\cline{1-2}
+\end{longtabu}
+
+
 \hypertarget{classRGESolver_0F}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
