--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -192,23 +192,23 @@ $\delta$ \mbox{[}rad\mbox{]} &1.\+1676 ~\newline
 &{\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Value \mbox{[}GeV\mbox{]} ~\newline
  }\\\cline{1-2}
-$m_u$ $[\mathrm{GeV}]$ &0.\+0012 ~\newline
+$m_u$ &0.\+0012 ~\newline
  \\\cline{1-2}
-$m_c$ $[\mathrm{GeV}]$ &0.\+640 ~\newline
+$m_c$ &0.\+640 ~\newline
  \\\cline{1-2}
-$m_t$ $[\mathrm{GeV}]$ &126.\+0 ~\newline
+$m_t$ &126.\+0 ~\newline
  \\\cline{1-2}
-$m_d$ $[\mathrm{GeV}]$ &0.\+0027 ~\newline
+$m_d$ &0.\+0027 ~\newline
  \\\cline{1-2}
-$m_s$ $[\mathrm{GeV}]$ &0.\+052 ~\newline
+$m_s$ &0.\+052 ~\newline
  \\\cline{1-2}
-$m_b$ $[\mathrm{GeV}]$ &2.\+75 ~\newline
+$m_b$ &2.\+75 ~\newline
  \\\cline{1-2}
-$m_{e}$ $[\mathrm{GeV}]$ &0.\+000511 ~\newline
+$m_{e}$ &0.\+000511 ~\newline
  \\\cline{1-2}
-$m_{\mu}$ $[\mathrm{GeV}]$ &0.\+1057 ~\newline
+$m_{\mu}$ &0.\+1057 ~\newline
  \\\cline{1-2}
-$m_{\tau}$ $[\mathrm{GeV}]$ &1.\+776 ~\newline
+$m_{\tau}$ &1.\+776 ~\newline
  \\\cline{1-2}
 \end{tabularx}}
 \\\cline{1-2}
