--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -104,7 +104,7 @@ S. Di Noi, L. Silvestrini.
 G\+NU General Public License \hypertarget{classRGESolver_SM}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
-\caption{Standard Model parameters. }\label{classRGESolver_SM}\\
+\caption{Standard Model parameters. The labels in the left column must be used with the \textbackslash{}ref \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient(std\+::string name)}} method. The ones in the right column must be used with \textbackslash{}ref Get\+Fermion\+Mass and \textbackslash{}ref Get\+C\+K\+M\+Angle }\label{classRGESolver_SM}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Name ~\newline
@@ -138,8 +138,6 @@ $\sin(\theta_{12})$ &{\ttfamily s12} ~\newline
 $\sin(\theta_{13})$ &{\ttfamily s13} ~\newline
  \\\cline{1-2}
 $\sin(\theta_{23})$ &{\ttfamily s23} ~\newline
- \\\cline{1-2}
-$\delta$ &{\ttfamily C\+K\+M\+\_\+delta} ~\newline
  \\\cline{1-2}
 $m_u$ $[\mathrm{GeV}]$ &{\ttfamily mu} ~\newline
  \\\cline{1-2}
