--- a/latex/classRGESolver.tex
+++ b/latex/classRGESolver.tex
@@ -101,10 +101,12 @@ A summary of the operators symmetry classes is given in table \doxytablelink{cla
 S. Di Noi, L. Silvestrini. 
 \end{DoxyAuthor}
 \begin{DoxyCopyright}{Copyright}
-G\+NU General Public License \hypertarget{classRGESolver_SM}{}
+G\+NU General Public License
+\end{DoxyCopyright}
+\hypertarget{classRGESolver_SM}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
-\caption{Standard Model parameters. The labels in the left column must be used with the \mbox{\hyperlink{classRGESolver_a23d5d847021421bc8a9ba03412d2674e}{Get\+Coefficient(std\+::string name)}} method. The ones in the right column must be used with \mbox{\hyperlink{classRGESolver_a55375c02297501cc3ba0302f707a690d}{Get\+Fermion\+Mass(std\+::string name)}} and \mbox{\hyperlink{classRGESolver_a1bdc3a8209979b9f4c583b47fc4988d4}{Get\+C\+K\+M\+Angle(std\+::string name)}} }\label{classRGESolver_SM}\\
+\caption{Standard Model parameters. The labels in the left column must be used with the Get\+Coefficient method, the ones in the right column must be used with Get\+Fermion\+Mass and Get\+C\+K\+M\+Angle methods. }\label{classRGESolver_SM}\\
 \hline
 {\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Name ~\newline
@@ -127,41 +129,39 @@ $\mathrm{Im}(\mathcal{Y}_d)$ &{\ttfamily YdI} ~\newline
  \\\cline{1-2}
 $\mathrm{Re}(\mathcal{Y}_e)$ &{\ttfamily YeR} ~\newline
  \\\cline{1-2}
-$\mathrm{Im}(\mathcal{Y}_e)$ &{\ttfamily YeI} ~\newline
- \\\cline{1-2}
+$\mathrm{Im}(\mathcal{Y}_e)$ &{\ttfamily YeI} \\\cline{1-2}
 \end{tabularx}}
 &{\begin{tabularx}{\linewidth}{|*{2}{>{\raggedright\arraybackslash}X|}}\hline
 \cellcolor{\tableheadbgcolor}\textbf{ Parameter }&\cellcolor{\tableheadbgcolor}\textbf{ Name ~\newline
  }\\\cline{1-2}
-$\sin(\theta_{12})$ &{\ttfamily s12} ~\newline
+$ \sin(\theta_{12})$ &{\ttfamily s12} ~\newline
  \\\cline{1-2}
-$\sin(\theta_{13})$ &{\ttfamily s13} ~\newline
+$ \sin(\theta_{13})$ &{\ttfamily s13} ~\newline
  \\\cline{1-2}
-$\sin(\theta_{23})$ &{\ttfamily s23} ~\newline
+$ \sin(\theta_{23})$ &{\ttfamily s23} ~\newline
  \\\cline{1-2}
-$m_u$ $[\mathrm{GeV}]$ &{\ttfamily mu} ~\newline
+$ m_u$ $[\mathrm{GeV}]$ &{\ttfamily mu} ~\newline
  \\\cline{1-2}
-$m_c$ $[\mathrm{GeV}]$ &{\ttfamily mc} ~\newline
+$ m_c$ $[\mathrm{GeV}]$ &{\ttfamily mc} ~\newline
  \\\cline{1-2}
-$m_t$ $[\mathrm{GeV}]$ &{\ttfamily mt} ~\newline
+$ m_t$ $[\mathrm{GeV}]$ &{\ttfamily mt} ~\newline
  \\\cline{1-2}
-$m_d$ $[\mathrm{GeV}]$ &{\ttfamily md} ~\newline
+$ m_d$ $[\mathrm{GeV}]$ &{\ttfamily md} ~\newline
  \\\cline{1-2}
-$m_s$ $[\mathrm{GeV}]$ &{\ttfamily ms} ~\newline
+$ m_s$ $[\mathrm{GeV}]$ &{\ttfamily ms} ~\newline
  \\\cline{1-2}
-$m_b$ $[\mathrm{GeV}]$ &{\ttfamily mb} ~\newline
+$ m_b$ $[\mathrm{GeV}]$ &{\ttfamily mb} ~\newline
  \\\cline{1-2}
-$m_{e}$ $[\mathrm{GeV}]$ &{\ttfamily mel} ~\newline
+$ m_{e}$ $[\mathrm{GeV}]$ &{\ttfamily mel} ~\newline
  \\\cline{1-2}
-$m_{\mu}$ $[\mathrm{GeV}]$ &{\ttfamily mmu} ~\newline
+$ m_{\mu}$ $[\mathrm{GeV}]$ &{\ttfamily mmu} ~\newline
  \\\cline{1-2}
-$m_{\tau}$ $[\mathrm{GeV}]$ &{\ttfamily mtau} ~\newline
- \\\cline{1-2}
+$ m_{\tau}$ $[\mathrm{GeV}]$ &{\ttfamily mtau} \\\cline{1-2}
 \end{tabularx}}
 \\\cline{1-2}
 \end{longtabu}
 
-\end{DoxyCopyright}
+
 \hypertarget{classRGESolver_0F}{}
 \tabulinesep=1mm
 \begin{longtabu}spread 0pt [c]{*{2}{|X[-1]}|}
